--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,7 +12,7 @@
         <header class="topbar">
             <h1 class="fill">
                 <a href="@routes.Application.index()">
-                    Play 2.0 sample application &mdash; Computer database
+                    Play 2.0 sample application for Clever Cloud &mdash; Computer database
                 </a>
             </h1>
         </header>
